@@ -18,6 +18,7 @@ Mon Jun 30 2014
    * Added chcek that the specified distribution is valid
    * Fixed macro generation for Poisson responses in mixed models
    * smat option can now apply to more than one level
+   * Added check that the IDs and weights are valid for multiple membership models
 
 2. Changes
    * Enabled matching starting values on parameter names (allowing subsets of parameters to be specified)
